--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -33,12 +33,11 @@ jobs:
         enable-cache: true
     - name: Install dependencies
       run: npm ci
-      working-directory: frontend
     - run: uv sync
-      working-directory: backend
+      working-directory: specifai/general/backend
     - run: uv run bash scripts/generate-client.sh
       env:
-        VIRTUAL_ENV: backend/.venv
+        VIRTUAL_ENV: specifai/general/backend/.venv
         SECRET_KEY: just-for-generating-client
         POSTGRES_PASSWORD: just-for-generating-client
         FIRST_SUPERUSER_PASSWORD: just-for-generating-client
@@ -46,7 +45,7 @@ jobs:
       run: |
         git config --local user.email "github-actions@github.com"
         git config --local user.name "github-actions"
-        git add frontend/src/client
+        git add specifai/general/frontend/utils/client
     # Same repo PRs
     - name: Push changes
       if: ( github.event_name != 'pull_request' || github.secret_source == 'Actions' )
