--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,8 +29,8 @@ jobs:
       with:
         filters: |
           changed:
-            - backend/**
-            - frontend/**
+            - specifai/general/backend/**
+            - specifai/general/frontend/**
             - .env
             - docker-compose*.yml
             - .github/workflows/playwright.yml
@@ -65,12 +65,12 @@ jobs:
         version: "0.4.15"
         enable-cache: true
     - run: uv sync
-      working-directory: backend
+      working-directory: specifai/general/backend
     - run: npm ci
-      working-directory: frontend
+      working-directory: .
     - run: uv run bash scripts/generate-client.sh
       env:
-        VIRTUAL_ENV: backend/.venv
+        VIRTUAL_ENV: specifai/general/backend/.venv
     - run: docker compose build
     - run: docker compose down -v --remove-orphans
     - name: Run Playwright tests
@@ -81,7 +81,7 @@ jobs:
       uses: actions/upload-artifact@v5
       with:
         name: blob-report-${{ matrix.shardIndex }}
-        path: frontend/blob-report
+        path: specifai/general/frontend/blob-report
         include-hidden-files: true
         retention-days: 1
 
@@ -99,21 +99,20 @@ jobs:
         node-version: 20
     - name: Install dependencies
       run: npm ci
-      working-directory: frontend
+      working-directory: .
     - name: Download blob reports from GitHub Actions Artifacts
       uses: actions/download-artifact@v6
       with:
-        path: frontend/all-blob-reports
+        path: specifai/general/frontend/all-blob-reports
         pattern: blob-report-*
         merge-multiple: true
     - name: Merge into HTML Report
-      run: npx playwright merge-reports --reporter html ./all-blob-reports
-      working-directory: frontend
+      run: npx playwright merge-reports --reporter html ./specifai/general/frontend/all-blob-reports
     - name: Upload HTML report
       uses: actions/upload-artifact@v5
       with:
         name: html-report--attempt-${{ github.run_attempt }}
-        path: frontend/playwright-report
+        path: specifai/general/frontend/playwright-report
         retention-days: 30
         include-hidden-files: true
 
