Fix CI env setup

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -48,6 +48,8 @@ jobs:
       fail-fast: false
     steps:
     - uses: actions/checkout@v6
+    - name: Load CI env
+      run: cp .env.ci .env
     - uses: actions/setup-node@v6
       with:
         node-version: lts/*
