--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   add-to-project:
     name: Add to project
+    if: ${{ secrets.PROJECTS_TOKEN != '' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/add-to-project@v1.0.2
