--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -19,7 +19,9 @@ jobs:
       if: ( github.event_name != 'pull_request' || github.secret_source == 'Actions' )
       with:
         ref: ${{ github.head_ref }}
-        token: ${{ secrets.FULL_STACK_FASTAPI_TEMPLATE_REPO_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Load CI env
+      run: cp .env.ci .env
     - uses: actions/setup-node@v6
       with:
         node-version: lts/*
