--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6
+      - name: Load CI env
+        run: cp .env.ci .env
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
