--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -10,10 +10,12 @@ on:
 jobs:
   add-to-project:
     name: Add to project
-    if: ${{ secrets.PROJECTS_TOKEN != '' }}
+    if: ${{ env.PROJECTS_TOKEN != '' }}
+    env:
+      PROJECTS_TOKEN: ${{ secrets.PROJECTS_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/fastapi/projects/2
-          github-token: ${{ secrets.PROJECTS_TOKEN }}
+          github-token: ${{ env.PROJECTS_TOKEN }}
