Fix backend CI alembic config

--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -32,12 +32,14 @@ jobs:
         run: uv run bash scripts/prestart.sh
         working-directory: specifai/general/backend
         env:
+          ALEMBIC_CONFIG: ../../../alembic.ini
           POSTGRES_SERVER: localhost
           POSTGRES_PORT: "5432"
       - name: Run tests
         run: uv run bash scripts/tests-start.sh "Coverage for ${{ github.sha }}"
         working-directory: specifai/general/backend
         env:
+          ALEMBIC_CONFIG: ../../../alembic.ini
           POSTGRES_SERVER: localhost
           POSTGRES_PORT: "5432"
       - run: docker compose down -v --remove-orphans
