Fix alembic script location

--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = specifai/general/backend/components/alembic
+script_location = %(here)s/specifai/general/backend/components/alembic
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
