Various fixes to boost coverage.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ keep-runtime-typing = true
 [tool.coverage.run]
 source = ["specifai"]
 dynamic_context = "test_function"
+omit = ["**/*_test.py"]
 
 [tool.coverage.report]
 show_missing = true
