--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pydantic-settings<3.0.0,>=2.2.1",
     "sentry-sdk[fastapi]>=2.20.0,<3.0.0",
     "pyjwt<3.0.0,>=2.8.0",
+    "mypy>=1.11.2",
 ]
 
 [tool.uv]
