--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,8 +29,7 @@ jobs:
       with:
         filters: |
           changed:
-            - specifai/general/backend/**
-            - specifai/general/frontend/**
+            - specifai/**
             - .env
             - docker-compose*.yml
             - .github/workflows/playwright.yml
