Switch backend to MongoDB

--- a/.env.ci
+++ b/.env.ci
@@ -9,11 +9,11 @@ SECRET_KEY=ci-secret-key
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=adminadmin
 
-POSTGRES_SERVER=db
-POSTGRES_PORT=5432
-POSTGRES_DB=app
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+MONGODB_SERVER=mongo
+MONGODB_PORT=27017
+MONGODB_DB=app
+MONGODB_USER=mongo
+MONGODB_PASSWORD=mongo
 
 DOCKER_IMAGE_BACKEND=specifai-backend
 DOCKER_IMAGE_FRONTEND=specifai-frontend
