--- a/docker-compose.playwright-isolated.yml
+++ b/docker-compose.playwright-isolated.yml
@@ -1,22 +1,21 @@
 services:
-  pw-db:
-    image: postgres:17
+  pw-mongo:
+    image: mongo:7
     restart: "no"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB_PLAYWRIGHT:-specifai_playwright}"]
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
       interval: 10s
       retries: 5
       start_period: 30s
       timeout: 10s
     volumes:
-      - pw-db-data:/var/lib/postgresql/data/pgdata
+      - pw-mongo-data:/data/db
     env_file:
       - .env
     environment:
-      - PGDATA=/var/lib/postgresql/data/pgdata
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD?Variable not set}
-      - POSTGRES_USER=${POSTGRES_USER?Variable not set}
-      - POSTGRES_DB=${POSTGRES_DB_PLAYWRIGHT:-specifai_playwright}
+      - MONGO_INITDB_DATABASE=${MONGODB_DB_PLAYWRIGHT:-specifai_playwright}
+      - MONGO_INITDB_ROOT_USERNAME=${MONGODB_USER?Variable not set}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD?Variable not set}
 
   pw-mailcatcher:
     image: schickling/mailcatcher
@@ -27,7 +26,7 @@ services:
       context: .
       dockerfile: specifai/general/backend/Dockerfile
     depends_on:
-      pw-db:
+      pw-mongo:
         condition: service_healthy
     command: bash /app/scripts/backend-prestart.sh
     env_file:
@@ -45,11 +44,11 @@ services:
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - EMAILS_FROM_EMAIL=${EMAILS_FROM_EMAIL}
       - MAILCATCHER_HOST=http://pw-mailcatcher:1080
-      - POSTGRES_SERVER=pw-db
-      - POSTGRES_PORT=${POSTGRES_PORT}
-      - POSTGRES_DB=${POSTGRES_DB_PLAYWRIGHT:-specifai_playwright}
-      - POSTGRES_USER=${POSTGRES_USER?Variable not set}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD?Variable not set}
+      - MONGODB_SERVER=pw-mongo
+      - MONGODB_PORT=${MONGODB_PORT}
+      - MONGODB_DB=${MONGODB_DB_PLAYWRIGHT:-specifai_playwright}
+      - MONGODB_USER=${MONGODB_USER?Variable not set}
+      - MONGODB_PASSWORD=${MONGODB_PASSWORD?Variable not set}
       - SENTRY_DSN=${SENTRY_DSN}
 
   pw-backend:
@@ -58,7 +57,7 @@ services:
       dockerfile: specifai/general/backend/Dockerfile
     restart: "no"
     depends_on:
-      pw-db:
+      pw-mongo:
         condition: service_healthy
       pw-prestart:
         condition: service_completed_successfully
@@ -77,11 +76,11 @@ services:
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - EMAILS_FROM_EMAIL=${EMAILS_FROM_EMAIL}
       - MAILCATCHER_HOST=http://pw-mailcatcher:1080
-      - POSTGRES_SERVER=pw-db
-      - POSTGRES_PORT=${POSTGRES_PORT}
-      - POSTGRES_DB=${POSTGRES_DB_PLAYWRIGHT:-specifai_playwright}
-      - POSTGRES_USER=${POSTGRES_USER?Variable not set}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD?Variable not set}
+      - MONGODB_SERVER=pw-mongo
+      - MONGODB_PORT=${MONGODB_PORT}
+      - MONGODB_DB=${MONGODB_DB_PLAYWRIGHT:-specifai_playwright}
+      - MONGODB_USER=${MONGODB_USER?Variable not set}
+      - MONGODB_PASSWORD=${MONGODB_PASSWORD?Variable not set}
       - SENTRY_DSN=${SENTRY_DSN}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/utils/health-check/"]
@@ -128,4 +127,4 @@ services:
     entrypoint: ["bash", "/app/scripts/playwright-wait-and-run.sh"]
 
 volumes:
-  pw-db-data:
+  pw-mongo-data:
