--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,8 @@ dependencies = [
     "pydantic>2.0",
     "emails<1.0,>=0.6",
     "jinja2<4.0.0,>=3.1.4",
-    "alembic<2.0.0,>=1.12.1",
     "httpx<1.0.0,>=0.25.1",
-    "psycopg[binary]<4.0.0,>=3.1.13",
-    "sqlmodel<1.0.0,>=0.0.21",
+    "pymongo<5.0.0,>=4.7.0",
     # Pin bcrypt until passlib supports the latest
     "bcrypt==4.3.0",
     "pydantic-settings<3.0.0,>=2.2.1",
@@ -34,6 +32,7 @@ dev-dependencies = [
     "pre-commit<4.0.0,>=3.6.2",
     "types-passlib<2.0.0.0,>=1.7.7.20240106",
     "coverage<8.0.0,>=7.4.3",
+    "mongomock<5.0.0,>=4.2.0",
 ]
 
 [build-system]
