--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -30,8 +30,14 @@ jobs:
       - run: docker compose up -d mongo mailcatcher
       - name: Migrate DB
         run: uv run bash scripts/backend-prestart.sh
+        env:
+          MONGODB_SERVER: localhost
+          MONGODB_PORT: "27017"
       - name: Run tests
         run: uv run bash scripts/backend-tests-start.sh "Coverage for ${{ github.sha }}"
+        env:
+          MONGODB_SERVER: localhost
+          MONGODB_PORT: "27017"
       - run: docker compose down -v --remove-orphans
       - name: Store coverage files
         uses: actions/upload-artifact@v6
